# esp32-airmon

./: .gitignore  CMakeLists.txt  sdkconfig.defaults
.github/workflows/: release.yml
ansible/: ansible.cfg  run  site.yml
ansible/group_vars/: all.yml
ansible/handlers/: main.yml
ansible/tasks/: open_tcp.yml
firmware/: .gitignore  CMakeLists.txt  sdkconfig.defaults
firmware-fat/: CMakeLists.txt  sdkconfig.defaults
firmware-fat/main/: Kconfig.projbuild  app_main.cc  ca.hh  co2.cc  co2.hh  crc16.cc  measurement.cc  mqtt.hh  pms.cc  pms.hh  queue.hh  state.hh  time.cc  time.hh
firmware/main/: .gitignore  CMakeLists.txt  Kconfig.projbuild  app_main.c  app_main.cc  app_main.cpp  ca.hh  chrono.h  co2.c  co2.cc  co2.cpp  co2.h  co2.hh  commands.cc  commands.hh  common.h  common.hh  config.h.in  crc16.c  crc16.cpp  crc16.h  crc16.hh  dallas.c  dallas.cc  dallas.cpp  dallas.h  dallas.hh  device_config.hh.template  idf_component.yml  measurement.c  measurement.cc  measurement.cpp  measurement.h  measurement.hh  mqtt.c  mqtt.cc  mqtt.cpp  mqtt.h  mqtt.hh  net.c  (+37 more)
gateway/: .editorconfig  .gitignore  .golangci.yml  .goreleaser.yml  build.sh  go.mod  go.sum  main.go  settings.example.json
gateway/airkaz/: airkaz.go  net.go  time.go  time_test.go
gateway/ceb/: ceb.go  ceb_test.go
gateway/cityair/: cityair.go  cityair_test.go
gateway/client/: net.go  net_test.go
gateway/data/: data.go  locality.go  locality_test.go  substance.go  substance_test.go
gateway/db/: db.go  level.go  locality.go  observation.go  (+3 more)
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
(+39 files in other folders)
